<resources>
    <string name="app_name">TestingDemoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

    <string name="kotlin_practice">Kotlin Practice</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_here">SignUp Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="signup">SignUp</string>
    <string name="dashboard">DashBoard</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>


    <style name="Theme.Material3.Light.Dialog" parent="Base.Theme.Material3.Light.Dialog" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>